--- a/XBOX_DIEGO_21062022/css/style.css
+++ b/XBOX_DIEGO_21062022/css/style.css
@@ -219,15 +219,40 @@ img.contain{width: 100%;height: 100%;object-fit: contain;}
 /* [END] LARGE */
 
 @media screen and (max-width: 850px) {
+    .paragrafo{
+      text-align: justify;
+      font-size: 16px;
+      padding: 0;
+    
+    }
     .titulo {
-        font-size: 35px;
-        line-height: 45px;
+        font-size: 20px;
+        padding: 0;
+        line-height:normal;
+        padding-bottom: 10px;
+        padding-top: 20px;
+       
     }
     .topo{
         text-align: center;
+        padding: 0 10px;
+       font-size: 11px;
+       line-height:normal;
     }
     .res{
         text-align: center;
     }
-    
+    #imagem img{
+        justify-content: center;
+    }
+    #titulo-secundario .titulo{
+        font-size: 18px;
+    }
+    .number-item{
+        font-size: 120px;
+    }
+    #para-footer p{
+        text-align: justify;
+        font-size: 13px;
+    }
 }
