--- a/XBOX_DIEGO_21062022/css/style.css
+++ b/XBOX_DIEGO_21062022/css/style.css
@@ -243,7 +243,7 @@ img.contain{width: 100%;height: 100%;object-fit: contain;}
         text-align: center;
     }
     #imagem img{
-        justify-content: center;
+        width: 100%;
     }
     #titulo-secundario .titulo{
         font-size: 18px;
